Handle resizing of width and height via props

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
         <script src="index.js" type="module"></script>
     </head>
     <body>
-        <div>
-            <image-scratcher />
+        <div id="root">
+            <image-scratcher
+                :width="width"
+                :height="height"
+            />
         </div>
     </body>
 </html>
