Draw foreground and background

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Scratcher Test</title>
         <script src="index.js" type="module"></script>
     </head>
-    <body>
+    <body style="background: linear-gradient(45deg, blue 50%, darkblue 50%); background-size: 10px 10px;">
         <div id="root">
             <image-scratcher
                 :width="width"
