Emit event on scratch completion

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 :height="height"
                 foreground="images/flag.svg"
                 background="images/shape.svg"
+                @finished="finished()"
             />
         </div>
     </body>
